--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Привет мир</title>
 </head>
-  <body>
+  <  <p><a href="krossvordRU.html">🇷🇺 Русский кроссворд</a></p>
     <h1>Привет мир</h1>
-  </body>
+  < <p><a href="krossvordEN.html">🇬🇧 English Christmas Crossword</a></p>>
 </html>
