--- a/krossvordRU.html
+++ b/krossvordRU.html
@@ -1,99 +1,240 @@
-import pygame
-import sys
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Новогодний кроссворд</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f8ff;
+      text-align: center;
+      padding: 20px;
+    }
+    h1 {
+      color: #d42300;
+      text-shadow: 1px 1px 2px #aaa;
+    }
+    .grid {
+      display: inline-grid;
+      grid-template-columns: repeat(11, 40px);
+      grid-gap: 1px;
+      margin: 20px auto;
+      background-color: #333;
+      padding: 5px;
+      border-radius: 8px;
+    }
+    .cell {
+      width: 40px;
+      height: 40px;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      font-size: 18px;
+      position: relative;
+      color: #222;
+    }
+    .cell.black {
+      background-color: #222;
+    }
+    .cell.number::before {
+      content: attr(data-num);
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      font-size: 10px;
+      color: #666;
+    }
+    .word-hint {
+      text-align: left;
+      max-width: 600px;
+      margin: 20px auto;
+      padding: 10px;
+      background-color: #fff9e6;
+      border-radius: 6px;
+      border-left: 4px solid #ffa500;
+    }
+    .hint-list {
+      list-style-type: none;
+      padding-left: 0;
+    }
+    .hint-list li {
+      margin: 6px 0;
+    }
+  </style>
+</head>
+<body>
+  <h1>🎄 Новогодний кроссворд 🎁</h1>
 
-# Инициализация Pygame
-pygame.init()
+  <!-- Сетка кроссворда — 11×11 -->
+  <div class="grid" id="crossword">
+    <!-- Строка 0 -->
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell number" data-num="1">с</div>
+    <div class="cell">н</div>
+    <div class="cell">е</div>
+    <div class="cell">г</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Параметры
-CELL_SIZE = 40
-GRID_SIZE = 15
-WIDTH = GRID_SIZE * CELL_SIZE
-HEIGHT = GRID_SIZE * CELL_SIZE + 80  # + место под заголовок
-FONT_SIZE = 24
-TITLE_FONT_SIZE = 32
+    <!-- Строка 1 -->
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell">о</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Цвета
-BACKGROUND = (250, 250, 255)
-GRID_COLOR = (50, 50, 100)
-TEXT_COLOR = (0, 0, 0)
-HIGHLIGHT_COLOR = (255, 200, 0)
-WORD_LIST_BG = (240, 240, 255)
+    <!-- Строка 2 -->
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell">д</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Создание окна
-screen = pygame.display.set_mode((WIDTH, HEIGHT))
-pygame.display.set_caption("Новогодний кроссворд 🎄")
+    <!-- Строка 3 -->
+    <div class="cell number" data-num="2">п</div>
+    <div class="cell">о</div>
+    <div class="cell">д</div>
+    <div class="cell">а</div>
+    <div class="cell">р</div>
+    <div class="cell">к</div>
+    <div class="cell">и</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Шрифты
-font = pygame.font.SysFont('Arial', FONT_SIZE, bold=True)
-title_font = pygame.font.SysFont('Arial', TITLE_FONT_SIZE, bold=True)
+    <!-- Строка 4 -->
+    <div class="cell">р</div>
+    <div class="cell black"></div>
+    <div class="cell">л</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Инициализация пустой сетки
-grid = [['' for _ in range(GRID_SIZE)] for _ in range(GRID_SIZE)]
+    <!-- Строка 5 -->
+    <div class="cell">а</div>
+    <div class="cell number" data-num="3">е</div>
+    <div class="cell">к</div>
+    <div class="cell">а</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Слова и их позиции [слово, x, y, направление ('h' или 'v')]
-words = [
-    ("ёлка", 0, 1, 'h'),
-    ("снегурочка", 0, 3, 'h'),
-    ("снег", 0, 5, 'h'),
-    ("каток", 0, 7, 'h'),
-    ("подарки", 2, 9, 'h'),
-    ("шампанское", 1, 11, 'h'),
-    ("гирлянда", 6, 0, 'v'),
-    ("снеговик", 3, 0, 'v'),
-    ("мишура", 9, 2, 'v'),
-    ("праздник", 12, 3, 'v')
-]
+    <!-- Строка 6 -->
+    <div class="cell">з</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Заполнение сетки
-for word, x, y, direction in words:
-    for i, char in enumerate(word):
-        if direction == 'h':
-            grid[y][x + i] = char.upper()
-        else:  # 'v'
-            grid[y + i][x] = char.upper()
+    <!-- Строка 7 -->
+    <div class="cell">д</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Функция отрисовки сетки
-def draw_grid():
-    for row in range(GRID_SIZE):
-        for col in range(GRID_SIZE):
-            rect = pygame.Rect(col * CELL_SIZE, row * CELL_SIZE + 60, CELL_SIZE, CELL_SIZE)
-            pygame.draw.rect(screen, GRID_COLOR, rect, 1)  # тонкая рамка
-            if grid[row][col]:
-                text = font.render(grid[row][col], True, TEXT_COLOR)
-                screen.blit(text, (rect.centerx - text.get_width()//2,
-                                   rect.centery - text.get_height()//2))
+    <!-- Строка 8 -->
+    <div class="cell">н</div>
+    <div class="cell number" data-num="4">п</div>
+    <div class="cell">р</div>
+    <div class="cell">а</div>
+    <div class="cell">з</div>
+    <div class="cell">д</div>
+    <div class="cell">н</div>
+    <div class="cell">и</div>
+    <div class="cell">к</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Функция отрисовки списка слов
-def draw_word_list():
-    pygame.draw.rect(screen, WORD_LIST_BG, (0, HEIGHT - 80, WIDTH, 80))
-    y_offset = HEIGHT - 65
-    cols = 5
-    for i, (word, _, _, _) in enumerate(words):
-        text = font.render(f"{i+1}. {word}", True, TEXT_COLOR)
-        x = (WIDTH // cols) * (i % cols) + 20
-        y = y_offset + (i // cols) * 25
-        screen.blit(text, (x, y))
+    <!-- Строка 9 -->
+    <div class="cell">и</div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
 
-# Главный цикл
-running = True
-while running:
-    screen.fill(BACKGROUND)
+    <!-- Строка 10 -->
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+    <div class="cell black"></div>
+  </div>
 
-    # Заголовок
-    title = title_font.render("НОВОГОДНИЙ КРОССВОРД 🎅", True, (30, 30, 80))
-    screen.blit(title, (WIDTH//2 - title.get_width()//2, 10))
+  <!-- Подсказки -->
+  <div class="word-hint">
+    <h3>По горизонтали:</h3>
+    <ul class="hint-list">
+      <li><strong>1.</strong> Белое покрывало на земле зимой — <em>снег</em></li>
+      <li><strong>2.</strong> То, что Дед Мороз кладёт под ёлку — <em>подарки</em></li>
+      <li><strong>3.</strong> Новогоднее дерево — <em>елка</em></li>
+      <li><strong>4.</strong> Весёлое событие 31 декабря — <em>праздник</em></li>
+    </ul>
 
-    draw_grid()
-    draw_word_list()
+    <h3>По вертикали:</h3>
+    <ul class="hint-list">
+      <li><strong>1.</strong> Зрелищное ночное шоу с огнём в небе — <em>фейрверк</em></li>
+      <li><strong>2.</strong> Короткий новогодний фейерверк — <em>салют</em></li>
+      <li><strong>3.</strong> Знаменитые часы на Спасской башне — <em>куранты</em></li>
+      <li><strong>4.</strong> Ароматный цитрус, символ Нового года — <em>мандарины</em></li>
+      <li><strong>5.</strong> Праздничный салат из картошки, колбасы и солёных огурцов — <em>оливье</em></li>
+      <li><strong>6.</strong> Сияющий символ на макушке ёлки — <em>звезда</em></li>
+    </ul>
+  </div>
 
-    for event in pygame.event.get():
-        if event.type == pygame.QUIT:
-            running = False
-        elif event.type == pygame.KEYDOWN:
-            if event.key == pygame.K_ESCAPE:
-                running = False
+  <p><em>💡 Подсказка: Некоторые слова пересекаются. Например, буква «е» в слове «снег» — это первая буква слова «елка» по вертикали.</em></p>
 
-    pygame.display.flip()
-
-pygame.quit()
-sys.exit()
+</body>
+</html>
